--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Professional Mathematics Tutoring for Grades 6-11 (O/L). Expert guidance to excel in your math studies." />
-    <title>MathsWeb - Expert Mathematics Tutoring</title>
-  </head>
-  <body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Sinhala:wght@400;600;700&display=swap"
+        rel="stylesheet">
+    <meta name="description"
+        content="Professional Mathematics Tutoring for Grades 6-11 (O/L). Expert guidance to excel in your math studies." />
+    <title>A+ Maths - Expert Mathematics Tutoring</title>
+</head>
+
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
+
 </html>
