done and dusted

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Sinhala:wght@400;600;700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Serif+Sinhala:wght@400;600;700&family=Righteous&display=swap"
         rel="stylesheet">
     <meta name="description"
         content="Professional Mathematics Tutoring for Grades 6-11 (O/L). Expert guidance to excel in your math studies." />
-    <title>A+ Maths - Expert Mathematics Tutoring</title>
+    <title>A+ Maths with Nimantha Madushan</title>
 </head>
 
 <body>
